# parallel-dag-dsl

./: CMakeLists.txt  compile_commands.json  grammar  test.dsl
include/: computation_dag.hpp  dag_types.hpp  lexer.hpp  operation_registry.hpp  parser.hpp
src/: computation_dag.cpp  lexer.cpp  main.cpp  operation_registry.cpp  parser.cpp
